Add updated lab code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
@@ -35,4 +36,7 @@ dependencies {
 }
 repositories {
     mavenCentral()
+}
+androidExtensions {
+    experimental = true
 }
