--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 24 08:46:43 PDT 2018
-sdk.dir=/Users/anirudhsubramanyam/Library/Android/sdk
+#Wed Oct 24 12:35:38 PDT 2018
+sdk.dir=C\:\\Users\\wjbar\\AppData\\Local\\Android\\Sdk
